# pybind-project-template

./: .gitignore  README.md  setup.py
.github/workflows/: c-cpp.yml
csrc/: CMakeLists.txt
csrc/include/: ops.h
csrc/pybind/: CMakeLists.txt
csrc/src/: bindings.cpp  ops.cpp
csrc/test/: CMakeLists.txt  test.cpp
ops_pybind/: ops.py
scripts/: build_wheel.py
